Ajout introduction et nombre valeurs manquantes data_carreaux

--- a/notebooks/0_data_collection_cleaning.ipynb
+++ b/notebooks/0_data_collection_cleaning.ipynb
@@ -5,6 +5,17 @@
    "id": "83e51522",
    "metadata": {},
    "source": [
+    "# Introduction :\n",
+    "En Île-de-France, tandis qu'au temps de la révolution industrielle, les ménages les plus modestes qui possédaient des logements à proximité des usines étaient largement plus exposés à la pollution de l'air que les ménages aisés, nous nous sommes demandé si cette corrélation persistait toujours de nos jours. Autrement dit, nous nous sommes questionnés sur l'existence d'une corrélation entre l'exposition à la pollution de l'air et le niveau de vie des individus en Île-de-France. La pertinence de cette question provient d'une supposition paradoxale : d'une part, on peut supposer a priori que les ménages les plus modestes sont ceux qui possèdent des logements à proximité des axes routiers et donc exposés à un certain type de pollution, notamment au dioxyde d'azote (no2) ; d'autre part, on peut supposer a priori que les ménages les plus aisés sont ceux qui possèdent des logements en plein centre ville, où là aussi, la pollution liée au trafic routier semble plus importante. \n",
+    "\n",
+    "Dans un premier temps, nous avons extrait et nettoyé les données de niveau de vie et de pollution de l'air. Parce que ces dernières ne sont pas évidentes à trouver, nous avons d'abord procédé par webscraping pour extraire les données de pollutions au niveau communal sur le site Airparif, puis nous avons réussi à récupérer les données au niveau infracommunal par appel d'un API Airparif. Dans un second temps, nous avons analysé les données au niveau communal puis infracommunal et nous nous sommes intéressés particulièrement à l'influence de la présence d'un axe routier majeur sur la pollution et le niveau de vie des ménages situés à proximité. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "433ca285",
+   "metadata": {},
+   "source": [
     "# Data collection & cleaning\n",
     "\n",
     "Ce notebook décrit :\n",
@@ -23,12 +34,13 @@
     "- `data/processed/` : données nettoyées et prêtes pour l’analyse.\n",
     "\n",
     "Toutes les étapes de nettoyage sont réalisées à partir des données brutes, conformément aux consignes.\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9325f4ff",
    "metadata": {},
    "outputs": [],
@@ -67,7 +79,7 @@
    "id": "6b74f917",
    "metadata": {},
    "source": [
-    "## Step 1 — Webscraping Airparif (données pollution)\n",
+    "## Step 1.1 — Webscraping Airparif (données pollution)\n",
     "\n",
     "Nous avons récupéré les indicateurs de pollution (PM10, PM2.5, NO2) sur le site Airparif pour l’année 2019.\n",
     "Le scraping automatise la sélection de l’année et la recherche de chaque commune, puis extrait la valeur affichée.\n"
@@ -382,7 +394,7 @@
    "id": "0955b4ae",
    "metadata": {},
    "source": [
-    "## Step 2 — Récupération des données INSEE (format CSV)\n",
+    "## Step 1.2 — Récupération des données INSEE (format CSV)\n",
     "\n",
     "Les données INSEE sont récupérées sous forme de fichiers CSV directement depuis le site de l’INSEE.  \n",
     "Les fichiers sont stockés **sans modification** dans le dossier `data/raw/`.\n",
@@ -1892,7 +1904,7 @@
    "id": "6c5e7d0a",
    "metadata": {},
    "source": [
-    "## Step 3 — Contrôles de cohérence des données brutes\n",
+    "## Step 1.3 — Contrôles de cohérence des données brutes\n",
     "\n",
     "Avant toute transformation, nous réalisons des contrôles simples mais essentiels afin de vérifier la cohérence des données brutes issues d’Airparif et de l’INSEE.\n",
     "\n",
@@ -2027,7 +2039,7 @@
    "id": "2480a947",
    "metadata": {},
    "source": [
-    "## Step 4 — Sélection des variables socio-économiques pertinentes (INSEE)\n",
+    "## Step 1.4 — Sélection des variables socio-économiques pertinentes (INSEE)\n",
     "\n",
     "Les données Filosofi contiennent un grand nombre de variables décrivant la distribution des niveaux de vie.  \n",
     "Dans le cadre de ce projet, nous retenons un nombre limité de variables pertinentes afin de caractériser le niveau de vie et les inégalités au niveau communal.\n",
@@ -2271,7 +2283,7 @@
    "id": "7f856ca6",
    "metadata": {},
    "source": [
-    "## Step 5 — Harmonisation des clés géographiques (communes)\n",
+    "## Step 1.5 — Harmonisation des clés géographiques (communes)\n",
     "\n",
     "Les données de pollution issues d’Airparif ne contiennent pas directement le **code géographique INSEE (CODGEO)** des communes, mais uniquement le **nom de la commune**.\n",
     "\n",
@@ -3044,7 +3056,7 @@
    "id": "c4684ad5",
    "metadata": {},
    "source": [
-    "## Step 6 — Récupération de données au niveau de carreaux de 200m*200m\n",
+    "## Step 2.1 — Récupération de données au niveau de carreaux de 200m*200m\n",
     "\n",
     "Après avoir récupéré les données au niveau communal, nous avons réussi à récupérer les données au plus petit niveau possible correspondant à des carreaux de 200m de côté.\n",
     "\n",
@@ -3100,7 +3112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3d4c92ab",
    "metadata": {},
    "outputs": [
@@ -3108,13 +3120,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "téléchargement des données (environ 2 minutes)\n",
+      "téléchargement des données (1 à 2 minutes)\n",
       "téléchargement réussi -> décompression\n",
       "decompression zip terminée -> deuxième décompression\n"
      ]
     }
    ],
    "source": [
+    "import requests\n",
+    "from zipfile import ZipFile\n",
+    "import os\n",
+    "import py7zr\n",
+    "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
     "def telecharger_donnees():\n",
     "    print(\"téléchargement des données (1 à 2 minutes)\")\n",
     "    ROOT_DIR = Path().absolute().parent\n",
@@ -3332,6 +3353,59 @@
     "\n",
     "        # Ajout des données de pollution au dataframe\n",
     "        df3[f'{polluant}_2019'] = pd.read_csv(FICHIER_SAUVEGARDE)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "652968a9",
+   "metadata": {},
+   "source": [
+    "# Step 2.2 - Qualité des données infracommunalles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f624fb2f",
+   "metadata": {},
+   "source": [
+    "Pour ce qui est des valeurs manquantes, elles sont quasiment inexistantes (199 sur 60 085 soit environ 0.3% de lignes ayant au moins une valeur manquante) et elles proviennent en majorité d'une erreur de l'appel à l'API AirParif."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0410cbc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Il y a au total 60085 observations.\n",
+      "Il y a 199 lignes avec au moins une valeur manquante.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Il y a au total {len(df)} observations.\")\n",
+    "nb_lignes_manquantes = df.isnull().any(axis=1).sum()\n",
+    "print(f\"Il y a {nb_lignes_manquantes} lignes avec au moins une valeur manquante.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "983edaf0",
+   "metadata": {},
+   "source": [
+    "Notons que le dataset obtenu ne couvre absolument pas tout le territoire francilien. En effet, le secret fiscal oblige à ne pas dévoiler la moyenne des revenus pour une zone de moins de 11 habitants. Néanmoins, la plupart des français (80%) habitent d'un une zone carroyées 200m*200m par l'INSEE (source : DOCUMENTATION – données carroyées FILOSOFI 2019)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57fdeb48",
+   "metadata": {},
+   "source": [
+    "En somme, le dataset est de très bonne qualité, et ne nécessite pas en l'état de traitement particuliers."
    ]
   }
  ],
