--- a/notebooks/3_modelisation.ipynb
+++ b/notebooks/3_modelisation.ipynb
@@ -1094,7 +1094,33 @@
     "\n",
     "L’analyse intra-cluster met en évidence des relations hétérogènes entre niveau de vie et exposition à la pollution. Dans les territoires les plus précaires, l’exposition est principalement liée à des mécanismes de relégation socio-spatiale, tandis que dans les espaces centraux favorisés, la richesse relative permet de réduire l’exposition, même dans un contexte de forte densité urbaine. À l’inverse, dans les territoires ruraux et pavillonnaires, la pollution est davantage associée à la proximité fonctionnelle des axes de transport qu’à la précarité sociale.\n",
     "\n",
-    "Ces résultats confirment que les inégalités environnementales ne relèvent pas d’un mécanisme unique, mais de configurations territoriales distinctes combinant densité, centralité et structures sociales.\n"
+    "Ces résultats sont cohérents avec la littérature sur les inégalités environnementales, qui souligne l’importance de la relégation socio-spatiale dans l’exposition différenciée à la pollution.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c652731",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "Ce projet avait pour objectif d’analyser l’existence d’un lien entre exposition à la pollution de l’air et niveau de vie en Île-de-France, en mobilisant des données environnementales, socio-économiques et géographiques à une échelle fine. À travers une approche progressive combinant analyses descriptives, réduction de dimension et méthodes de classification, nous avons mis en évidence des mécanismes complexes d’inégalités environnementales.\n",
+    "\n",
+    "Les analyses descriptives ont tout d’abord montré que la relation entre pollution et niveau de vie ne se résume pas à une opposition simple entre territoires riches et pauvres. Si certaines zones défavorisées apparaissent fortement exposées à la pollution, d’autres territoires favorisés — notamment les espaces centraux et très denses — présentent également des niveaux élevés de polluants atmosphériques. Ces premiers résultats suggèrent une forte hétérogénéité spatiale, liée à la densité urbaine, à la proximité des infrastructures routières et aux formes d’urbanisation.\n",
+    "\n",
+    "La phase de modélisation a permis d’aller au-delà de ces constats. L’Analyse en Composantes Principales a mis en évidence des axes structurants opposant notamment exposition environnementale, précarité sociale et formes urbaines. Le clustering réalisé sur les composantes principales a permis d’identifier quatre profils territoriaux homogènes : une banlieue résidentielle aisée peu exposée, des territoires ruraux faiblement pollués, un hyper-centre riche mais fortement exposé, et surtout un groupe caractérisé par un cumul de vulnérabilités sociales et environnementales. Ce dernier cluster illustre clairement une situation d’injustice environnementale, dans laquelle les populations les plus précaires sont également celles qui subissent les niveaux de pollution les plus élevés.\n",
+    "\n",
+    "L’analyse intra-cluster a enfin montré que les mécanismes reliant niveau de vie et pollution diffèrent selon les profils territoriaux. Dans les territoires les plus défavorisés, l’exposition à la pollution est davantage liée à des phénomènes de relégation socio-spatiale qu’au revenu absolu. À l’inverse, dans les territoires centraux favorisés, la richesse — en particulier relative — semble offrir une capacité à se protéger partiellement de la pollution, même dans des contextes urbains très denses. Ces résultats confirment que les inégalités environnementales ne relèvent pas d’un mécanisme unique, mais de configurations socio-spatiales distinctes.\n",
+    "\n",
+    "# Limites et perspectives\n",
+    "\n",
+    "Malgré la richesse des données mobilisées, cette étude présente plusieurs limites. L’analyse repose sur des données agrégées observées à un instant donné, ce qui ne permet pas d’établir des relations causales entre niveau de vie et exposition à la pollution. Les résultats doivent donc être interprétés comme des associations conditionnelles.\n",
+    "\n",
+    "Certaines dimensions importantes de l’exposition environnementale ne sont pas prises en compte, notamment les conditions météorologiques, la pollution industrielle ou les mobilités quotidiennes, qui peuvent modifier l’exposition réelle des individus. Par ailleurs, le périmètre géographique limité à l’Île-de-France restreint la généralisation des résultats.\n",
+    "\n",
+    "Enfin, les résultats du clustering dépendent de choix méthodologiques (variables retenues, nombre de groupes), bien que ceux-ci aient été justifiés.\n",
+    "\n",
+    "Pour aller plus loin, l’intégration de données longitudinales, l’utilisation de modèles spatiaux ou quasi-causaux, ainsi que l’élargissement du champ géographique ou l’exploitation de données de mobilité permettraient d’approfondir l’analyse des inégalités environnementales.\n"
    ]
   }
  ],
