--- a/notebooks/1_data_collection_cleaning.ipynb
+++ b/notebooks/1_data_collection_cleaning.ipynb
@@ -98,18 +98,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "852c92ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\n!wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -O /tmp/chrome.deb\\n!sudo apt-get update\\n!sudo -E apt-get install -y /tmp/chrome.deb\\n!pip install chromedriver-autoinstaller selenium\\n\\nimport chromedriver_autoinstaller\\npath_to_web_driver = chromedriver_autoinstaller.install()\\n\\n'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\"\"\"\n",
+    "\n",
     "!wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -O /tmp/chrome.deb\n",
     "!sudo apt-get update\n",
     "!sudo -E apt-get install -y /tmp/chrome.deb\n",
     "!pip install chromedriver-autoinstaller selenium\n",
     "\n",
     "import chromedriver_autoinstaller\n",
-    "path_to_web_driver = chromedriver_autoinstaller.install()"
+    "path_to_web_driver = chromedriver_autoinstaller.install()\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
@@ -117,8 +132,20 @@
    "execution_count": 3,
    "id": "79fb6117",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nfrom selenium import webdriver\\nfrom selenium.webdriver.common.keys import Keys\\nfrom selenium.webdriver.chrome.service import Service\\nfrom selenium.webdriver.common.by import By\\nfrom selenium.webdriver.support.ui import WebDriverWait\\nfrom selenium.webdriver.support import expected_conditions as EC\\nimport time\\nimport pandas as pd\\n\\n# réglages des options du navigateur chrome\\nchrome_options = webdriver.ChromeOptions()\\nchrome_options.add_argument('--headless')\\nchrome_options.add_argument('--no-sandbox')\\nchrome_options.add_argument('--disable-dev-shm-usage')\\n\\n\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "\"\"\"\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.chrome.service import Service\n",
@@ -132,7 +159,9 @@
     "chrome_options = webdriver.ChromeOptions()\n",
     "chrome_options.add_argument('--headless')\n",
     "chrome_options.add_argument('--no-sandbox')\n",
-    "chrome_options.add_argument('--disable-dev-shm-usage')"
+    "chrome_options.add_argument('--disable-dev-shm-usage')\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
@@ -140,15 +169,29 @@
    "execution_count": 4,
    "id": "0b760ff3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nservice = Service(executable_path=path_to_web_driver)\\n\\nbrowser = webdriver.Chrome(\\n    service=service,\\n    options=chrome_options\\n)\\n\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#lancement du navigateur Chrome\n",
+    "\"\"\"\n",
     "service = Service(executable_path=path_to_web_driver)\n",
     "\n",
     "browser = webdriver.Chrome(\n",
     "    service=service,\n",
     "    options=chrome_options\n",
-    ")"
+    ")\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
@@ -167,11 +210,24 @@
    "execution_count": 5,
    "id": "305f37bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nbrowser.get('https://www.airparif.fr/surveiller-la-pollution/bilans-et-cartes-annuels-de-pollution')\\ntime.sleep(10)\\n\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#chargement de la page airparif\n",
+    "\"\"\"\n",
     "browser.get('https://www.airparif.fr/surveiller-la-pollution/bilans-et-cartes-annuels-de-pollution')\n",
-    "time.sleep(10)"
+    "time.sleep(10)\n",
+    "\"\"\""
    ]
   },
   {
@@ -179,9 +235,21 @@
    "execution_count": 6,
    "id": "66c6d4cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nannée=\"2019\"\\nfrom selenium.webdriver.support.ui import Select\\nwait = WebDriverWait(browser, 10)\\nelement_menu = wait.until(EC.element_to_be_clickable((By.XPATH,\\'//*[@id=\"date-filter\"]\\')))\\nmenu_deroulant = Select(element_menu)\\nmenu_deroulant.select_by_visible_text(année)\\n\\ntime.sleep(3)\\n'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#choix de l'année 2019\n",
+    "\"\"\"\n",
     "année=\"2019\"\n",
     "from selenium.webdriver.support.ui import Select\n",
     "wait = WebDriverWait(browser, 10)\n",
@@ -189,7 +257,8 @@
     "menu_deroulant = Select(element_menu)\n",
     "menu_deroulant.select_by_visible_text(année)\n",
     "\n",
-    "time.sleep(3)"
+    "time.sleep(3)\n",
+    "\"\"\""
    ]
   },
   {
@@ -209,9 +278,21 @@
    "execution_count": 7,
    "id": "11aadedd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfrom selenium.common.exceptions import StaleElementReferenceException\\n\\ndef fonction_taux_de_particule(l):\\n    search = browser.find_element(\"xpath\",\\'//*[@id=\"carte-annuelle-panel-info\"]//input\\')\\n    wait = WebDriverWait(browser, 3, ignored_exceptions=(StaleElementReferenceException,))\\n    valeur=[{\"Commune\" : e ,\"pm10\":None , \"pm25\":None , \"no2\":None} for e in l]\\n    liste_polluant=[\"pm10\",\"pm25\",\"no2\"]\\n    bouton_polluant = wait.until(EC.element_to_be_clickable((By.CSS_SELECTOR, f\"a[data-pid={liste_polluant[0]}]\")))\\n    browser.execute_script(\"arguments[0].click();\", bouton_polluant)\\n    print(f\"Clic forcé sur le {liste_polluant[0]} effectué via JavaScript.\")\\n    time.sleep(5)\\n    for j in range(len(liste_polluant)):\\n        #Remarque:initialement on se situe sur le pm10 par défaut\\n        polluant=liste_polluant[j]\\n        if j <=1:\\n            polluant_suivant=liste_polluant[j+1]\\n        else:\\n            polluant_suivant=None\\n        for i in range(len(l)):\\n            #1/la barre de recherche\\n            search.clear()\\n            search.send_keys(l[i])  \\n            #2/la barre de suggestion\\n            try:\\n                suggestion_a_cliquer= wait.until(EC.element_to_be_clickable((By.CLASS_NAME,\"pac-item\")))\\n                suggestion_a_cliquer.click()\\n                time.sleep(0.2)\\n            #3/le taux de particules dans l\\'air\\n                try:\\n                    taux_de_particules=wait.until(EC.visibility_of_element_located((By.XPATH,\\'//*[@id=\"current-params\"]/strong\\')))\\n                    valeur[i][polluant]=taux_de_particules.text\\n                except Exception as e:\\n                    print(f\"Une erreur 1 s\\'est produite pour la commune {l[i]} et le polluant {liste_polluant[j]} -> attribution None aux valeurs\")\\n            except Exception as e:\\n                print(f\"Une erreur 2 s\\'est produite pour la commune {l[i]} et le polluant {liste_polluant[j]} -> attribution None aux valeurs\")\\n        #chargement page nouveau polluant\\n        if polluant_suivant !=None:\\n            bouton_polluant = wait.until(EC.element_to_be_clickable((By.CSS_SELECTOR, f\"a[data-pid={polluant_suivant}]\")))\\n            browser.execute_script(\"arguments[0].click();\", bouton_polluant)\\n            print(f\"Clic forcé sur le {polluant_suivant} effectué via JavaScript.\")\\n            time.sleep(5)\\n    return(valeur)\\n\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#localisation de la barre des éléments : attention rajouter une intitialisation forcée à pm10\n",
+    "\"\"\"\n",
     "from selenium.common.exceptions import StaleElementReferenceException\n",
     "\n",
     "def fonction_taux_de_particule(l):\n",
@@ -255,7 +336,7 @@
     "            time.sleep(5)\n",
     "    return(valeur)\n",
     "\n",
-    "\n",
+    "\"\"\"\n",
     "        "
    ]
   },
@@ -272,9 +353,22 @@
    "execution_count": 8,
    "id": "4d30604f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\ndef extraction_donnee(l):\\n    nombre2paquet=len(l)//50\\n    reste=len(l)-nombre2paquet\\n    decoupage=[(i+1)*50 for i in range(nombre2paquet)]\\n    if reste!=0:\\n        decoupage.append(reste)\\n    inf=0\\n    valeur=[]\\n    for j in decoupage:\\n        paquet=l[inf:j]\\n        v=fonction_taux_de_particule(paquet)\\n        valeur.extend(v)\\n        print(f\"paquet {inf} à {j} traité -> paquet suivant\")\\n        df=pd.DataFrame(valeur) \\n        df.to_csv(f\"donnees_commune_pollution_paquet{j}.csv\",index=False)\\n        inf=j\\n    return(pd.DataFrame(valeur))\\n\\n'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#extraction par paquet de 50\n",
+    "\"\"\"\n",
+    "\n",
     "def extraction_donnee(l):\n",
     "    nombre2paquet=len(l)//50\n",
     "    reste=len(l)-nombre2paquet\n",
@@ -291,7 +385,9 @@
     "        df=pd.DataFrame(valeur) \n",
     "        df.to_csv(f\"donnees_commune_pollution_paquet{j}.csv\",index=False)\n",
     "        inf=j\n",
-    "    return(pd.DataFrame(valeur))"
+    "    return(pd.DataFrame(valeur))\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
@@ -304,19 +400,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "da8dcdb7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "téléchargement réussi -> décompression\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nimport requests\\nimport os\\n\\nROOT_DIR = Path().absolute().parent\\ndossier_data = ROOT_DIR / \"data\"\\ndestination = os.path.join(dossier_data, \"liste_communes_idf.csv\")\\nreponse=requests.get(\"https://www.data.gouv.fr/api/1/datasets/r/91c0bdc4-0a5b-4ac8-950e-64a1ec207957\")\\n\\nif reponse.status_code == 200 :\\n    print(\"téléchargement réussi -> décompression\")\\n    with open(destination,\"wb\") as f:\\n        f.write(reponse.content)\\n\\ndf_communes=pd.read_csv(destination, sep=\";\")\\nos.remove(destination)\\ndf_communes = df_communes.sort_values(by=\"nomcom\", ascending=True)\\ndf_communes[\"nomcom\"].to_csv(destination, index =False)\\n\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
     "import requests\n",
     "import os\n",
     "\n",
@@ -333,7 +433,9 @@
     "df_communes=pd.read_csv(destination, sep=\";\")\n",
     "os.remove(destination)\n",
     "df_communes = df_communes.sort_values(by=\"nomcom\", ascending=True)\n",
-    "df_communes[\"nomcom\"].to_csv(destination, index =False)\n"
+    "df_communes[\"nomcom\"].to_csv(destination, index =False)\n",
+    "\n",
+    "\"\"\"\n"
    ]
   },
   {
