Clarification collecte Airparif + gestion données brutes

--- a/notebooks/1_data_collection_cleaning.ipynb
+++ b/notebooks/1_data_collection_cleaning.ipynb
@@ -11,7 +11,11 @@
     "La pertinence de cette question provient d'une supposition paradoxale : d'une part, on peut supposer a priori que les ménages les plus modestes sont ceux qui possèdent des logements à proximité des axes routiers et donc exposés à un certain type de pollution, notamment au dioxyde d'azote (no2) ; d'autre part, on peut supposer a priori que les ménages les plus aisés sont ceux qui possèdent des logements en plein centre ville, où là aussi, la pollution liée au trafic routier semble plus importante. La littérature confirme l'existence de ce paradoxe dans certaines zones géographiques. Ainsi, Padilla et al. (2014) met en évidence dans son étude \"Air quality and social deprivation in four French metropolitan areas – A localized spatiotemporal environmental inequality analysis\" l'existence d'un paradoxe parisien où les quartiers les plus favorisés (SES élevé) sont souvent exposés à des concentrations moyennes de no2 plus élevées que les quartiers pauvres (effet de la densité urbaine).\n",
     "\n",
     "\n",
-    "Dans un premier temps, nous avons extrait et nettoyé les données de niveau de vie et de pollution de l'air. Parce que ces dernières ne sont pas évidentes à trouver, nous avons d'abord procédé par webscraping pour extraire les données de pollutions au niveau communal sur le site Airparif, puis nous avons réussi à récupérer les données au niveau infracommunal par appel d'un API Airparif. Dans un second temps, nous avons analysé les données au niveau communal puis infracommunal et nous nous sommes intéressés particulièrement à l'influence de la présence d'un axe routier majeur sur la pollution et le niveau de vie des ménages situés à proximité. \n"
+    "Dans un premier temps, nous avons extrait et nettoyé les données de niveau de vie et de pollution de l’air. Les données de niveau de vie ont été récupérées à partir des bases de l’INSEE, tandis que les données de pollution atmosphérique sont plus difficiles d’accès. Nous avons donc d’abord procédé à du web scraping afin d’extraire les données de pollution au niveau communal depuis le site d’Airparif, puis utilisé l’API d’Airparif pour obtenir des données à une échelle infracommunale. \n",
+    "\n",
+    "Dans un second temps, nous avons analysé les données aux échelles communale et infracommunale afin de répondre à la question centrale de ce projet : existe-t-il un lien entre le niveau de vie des populations et leur exposition à la pollution de l’air en Île-de-France, et ce lien varie-t-il selon les caractéristiques urbaines et spatiales des territoires, notamment la proximité des axes routiers majeurs ?\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -43,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9325f4ff",
    "metadata": {},
    "outputs": [],
@@ -52,6 +56,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "# Définition des chemins de données et création des dossiers nécessaires\n",
     "DATA_DIR = Path(\"../data\")\n",
     "RAW_DIR = DATA_DIR / \"raw\"\n",
     "PROC_DIR = DATA_DIR / \"processed\"\n",
@@ -59,6 +64,7 @@
     "RAW_DIR.mkdir(parents=True, exist_ok=True)\n",
     "PROC_DIR.mkdir(parents=True, exist_ok=True)\n",
     "\n",
+    "# Option d'affichage pour faciliter l'exploration des DataFrames\n",
     "pd.set_option(\"display.max_columns\", 200)\n"
    ]
   },
@@ -3314,7 +3320,7 @@
     "        BATCH_SIZE = 100  # On sauvegarde toutes les 100 lignes\n",
     "        ROOT_DIR = Path().absolute().parent\n",
     "        dossier_data = ROOT_DIR / \"data_carreaux\"\n",
-    "        FICHIER_SAUVEGARDE = os.path.joint(dossier_data, f\"donnees_pollution{polluant}_checkpoint.csv\")\n",
+    "        FICHIER_SAUVEGARDE = os.path.join(dossier_data, f\"donnees_pollution{polluant}_checkpoint.csv\")\n",
     "\n",
     "        for index, row in tqdm(df3.iterrows(), total=len(df3)):\n",
     "            # initialisation des paramètres d'appel à l'API\n",
