Documentation récupération données INSEE & Airparif

--- a/notebooks/1_data_collection_cleaning.ipynb
+++ b/notebooks/1_data_collection_cleaning.ipynb
@@ -3072,11 +3072,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee5495b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sauvegarde des données nettoyées pour les analyses suivantes\n",
+    "output_path = PROC_DIR / \"df_final.csv\"\n",
+    "df_final.to_csv(output_path, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83a6dfbd",
+   "metadata": {},
+   "source": [
+    "Les données nettoyées sont sauvegardées localement dans le dossier `data/processed`\n",
+    "afin d’être réutilisées dans les notebooks d’analyse et de modélisation.\n",
+    "Ces fichiers ne sont pas versionnés sur GitHub.\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c4684ad5",
    "metadata": {},
    "source": [
-    "## Step 2.1 — Récupération de données au niveau de carreaux de 200m*200m\n",
+    "## Step 2.1 — Récupération de données au niveau de carreaux de 200m x 200m\n",
     "\n",
     "Après avoir récupéré les données au niveau communal, nous avons réussi à récupérer les données au plus petit niveau possible correspondant à des carreaux de 200m de côté.\n",
     "\n",
@@ -3417,7 +3439,9 @@
    "id": "983edaf0",
    "metadata": {},
    "source": [
-    "Notons que le dataset obtenu ne couvre absolument pas tout le territoire francilien. En effet, le secret fiscal oblige à ne pas dévoiler la moyenne des revenus pour une zone de moins de 11 habitants. Néanmoins, la plupart des français (80%) habitent d'un une zone carroyées 200m*200m par l'INSEE (source : DOCUMENTATION – données carroyées FILOSOFI 2019)."
+    "Notons que le jeu de données obtenu ne couvre pas l’intégralité du territoire francilien. En effet, pour des raisons de secret statistique, l’INSEE ne diffuse pas les indicateurs de niveau de vie pour les zones comptant moins de 11 habitants. Certaines zones carroyées de 200 m × 200 m sont donc absentes de notre base.\n",
+    "\n",
+    "Néanmoins, cette limitation reste relativement marginale : selon la documentation FILOSOFI 2019 de l’INSEE, environ 80 % de la population française réside dans des zones carroyées de 200 m × 200 m. L’échantillon utilisé demeure ainsi largement représentatif des espaces effectivement habités, en particulier dans un contexte urbain dense comme l’Île-de-France.\n"
    ]
   },
   {
