chemin relatif vers les données dans raw

--- a/notebooks/3_modelisation.ipynb
+++ b/notebooks/3_modelisation.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "32a81fad",
    "metadata": {},
    "outputs": [
@@ -175,25 +175,42 @@
    ],
    "source": [
     "import osmnx as ox\n",
+    "import geopandas as gpd\n",
+    "import os\n",
     "\n",
     "def recuperer_routes_idf():\n",
-    "    print(\"Récupération des routes en cours\")\n",
-    "    \n",
-    "    # on récupère tous les types de routes jusqu'aux départementales\n",
-    "    # primary Grandes Départementales ou axes urbains majeurs\n",
-    "    # secondary\tRoutes Départementales classiques (relient les villes moyennes)\n",
-    "    mes_axes = [\"motorway\", \"trunk\", \"primary\", \"secondary\"]\n",
-    "    \n",
-    "    # On télécharge les axes routiers spécifiquement pour l'Île-de-France\n",
-    "    routes_idf = ox.features_from_place(\"Île-de-France, France\", tags={\"highway\": mes_axes})\n",
-    "    \n",
-    "    # On ne garde que les géométries de type Ligne (LineString) pour éviter les erreurs\n",
-    "    routes_idf = routes_idf[routes_idf.geometry.type.isin(['LineString', 'MultiLineString'])]\n",
-    "    \n",
-    "    print(f\"Terminé ! {len(routes_idf)} segments de routes récupérés.\")\n",
+    "    # Définition du chemin relatif (Remonte d'un dossier vers la racine, puis va dans data/raw)\n",
+    "    dossier_raw = os.path.join(os.path.dirname(os.getcwd()), \"data\", \"raw\")\n",
+    "    chemin_fichier = os.path.join(dossier_raw, \"routes_idf.gpkg\")\n",
+    "\n",
+    "    # Vérification : Si le fichier existe, on le charge directement\n",
+    "    if os.path.exists(chemin_fichier):\n",
+    "        print(f\"Chargement des routes depuis le fichier local : {chemin_fichier}\")\n",
+    "        routes_idf = gpd.read_file(chemin_fichier)\n",
+    "    else:\n",
+    "        # Si absent, on télécharge\n",
+    "        print(\"Fichier local non trouvé. Récupération des routes via OSMnx en cours...\")\n",
+    "        \n",
+    "        # Types de routes ciblées\n",
+    "        mes_axes = [\"motorway\", \"trunk\", \"primary\", \"secondary\"]\n",
+    "        \n",
+    "        # Téléchargement via API Overpass\n",
+    "        routes_idf = ox.features_from_place(\"Île-de-France, France\", tags={\"highway\": mes_axes})\n",
+    "        \n",
+    "        routes_idf = routes_idf[routes_idf.geometry.type.isin(['LineString', 'MultiLineString'])]\n",
+    "        \n",
+    "        for col in routes_idf.columns:\n",
+    "            if routes_idf[col].apply(lambda x: isinstance(x, list)).any():\n",
+    "                routes_idf[col] = routes_idf[col].astype(str)\n",
+    "        \n",
+    "        if not os.path.exists(dossier_raw):\n",
+    "            os.makedirs(dossier_raw)\n",
+    "            \n",
+    "        routes_idf.to_file(chemin_fichier, driver=\"GPKG\")\n",
+    "        print(f\"Terminé ! {len(routes_idf)} segments sauvegardés dans {chemin_fichier}\")\n",
+    "\n",
     "    return routes_idf\n",
     "\n",
-    "# Utilisation\n",
     "base_routes = recuperer_routes_idf()"
    ]
   },
@@ -487,7 +504,7 @@
     "#Nettoyage final des valeurs manquantes ou infinies\n",
     "df_ml = df_ml.replace([np.inf, -np.inf], np.nan)\n",
     "df_ml = df_ml.dropna(subset=['no2', 'ind_snv', 'dist_route']) # On enlève les lignes inexploitables\n",
-    "df_ml = df_ml.fillna(0) # Le reste (ex: 0 logement social) devient 0\n",
+    "df_ml = df_ml.fillna(0) # le reste devient 0\n",
     "\n",
     "\n",
     "df_ml.head()"
