ajout données dans raw

--- a/notebooks/1_data_collection_cleaning.ipynb
+++ b/notebooks/1_data_collection_cleaning.ipynb
@@ -3307,7 +3307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "3d4c92ab",
    "metadata": {},
    "outputs": [
@@ -3339,7 +3339,7 @@
     "def telecharger_donnees():\n",
     "    print(\"téléchargement des données (1 à 2 minutes)\")\n",
     "    ROOT_DIR = Path().absolute().parent\n",
-    "    dossier_data = ROOT_DIR / \"data\"\n",
+    "    dossier_data = ROOT_DIR / \"data/raw\"\n",
     "    \n",
     "    # --- téléchargement des données carroyées de niveau de vie Insee ---\n",
     "    URL_INSEE_ZIP = \"https://www.insee.fr/fr/statistiques/fichier/7655475/Filosofi2019_carreaux_200m_shp.zip\"\n",
@@ -3414,13 +3414,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "id": "aa45cbe3",
    "metadata": {},
    "outputs": [],
    "source": [
     "ROOT_DIR = Path().absolute().parent\n",
-    "dossier_data = ROOT_DIR / \"data/processed\"\n",
+    "dossier_data = ROOT_DIR / \"data/raw\"\n",
     "df.to_csv(os.path.join(dossier_data,\"donnees_pollutions_carreaux\"), index =False)"
    ]
   },
