changement chemins relatifs

--- a/notebooks/3_modelisation.ipynb
+++ b/notebooks/3_modelisation.ipynb
@@ -46,92 +46,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0bce864f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "from zipfile import ZipFile\n",
     "import os\n",
-    "import py7zr\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
+    "from shapely import wkt\n",
     "\n",
+    "def charger_donnees_pollution():\n",
+    "    # Définition du chemin relatif\n",
+    "    # On remonte d'un dossier (..) pour sortir de /notebooks et on va dans /data/raw\n",
+    "    dossier_raw = os.path.join(\"..\", \"data\", \"raw\")\n",
+    "    chemin_fichier = os.path.join(dossier_raw, \"donnees_pollutions_carreaux.txt\")\n",
     "\n",
-    "# importation dd dataset sur le niveau de vie et le niveau de pollution par carreaux en\n",
-    "# Ile de France (données Airparif et Insee)\n",
-    "\n",
-    "def telecharger_donnees():\n",
-    "    print(\"téléchargement des données (environ 2 minutes)\")\n",
-    "    dossier_projet = os.path.dirname(os.getcwd()) \n",
-    "    dossier_data = os.path.join(dossier_projet, \"data_carreaux\")    # téléchargement des données carroyées de niveau de vie Insee\n",
-    "    URL_INSEE_ZIP = \"https://www.insee.fr/fr/statistiques/fichier/7655475/Filosofi2019_carreaux_200m_shp.zip\"\n",
-    "    intermediaire_zip = \"donnees.zip\"\n",
-    "    reponse = requests.get(URL_INSEE_ZIP)\n",
-    "    if reponse.status_code == 200:\n",
-    "        print(\"téléchargement réussi -> décompression\")\n",
-    "        with open(intermediaire_zip, \"wb\") as f:\n",
-    "            f.write(reponse.content)\n",
-    "        with ZipFile(intermediaire_zip, 'r') as zip_ref:\n",
-    "            zip_ref.extractall(dossier_data)\n",
-    "        chemin_fichier_7z = os.path.join(dossier_data, \"Filosofi2019_carreaux_200m_shp.7z\")\n",
-    "        print(\"decompression zip terminée -> deuxième décompression\")\n",
-    "        with py7zr.SevenZipFile(chemin_fichier_7z, mode=\"r\") as z:\n",
-    "            z.extractall(path=dossier_data)\n",
-    "\n",
-    "        # suppression des deux fichiers zip:\n",
-    "        os.remove(os.path.join(os.getcwd(), intermediaire_zip))\n",
-    "        os.remove(chemin_fichier_7z)\n",
+    "    # Vérification de l'existence du fichier\n",
+    "    if os.path.exists(chemin_fichier):\n",
+    "        print(f\"Chargement en cours : {chemin_fichier}\")\n",
+    "        \n",
+    "        # Lecture du fichier (c'est un CSV avec séparateur virgule par défaut)\n",
+    "        df = pd.read_csv(chemin_fichier)\n",
+    "        \n",
+    "        # Conversion de la colonne 'geometry' en vraies formes géométriques\n",
+    "        print(\"Conversion des géométries\")\n",
+    "        df['geometry'] = df['geometry'].apply(wkt.loads)\n",
+    "        \n",
+    "        # Transformation en GeoDataFrame \n",
+    "        gdf = gpd.GeoDataFrame(df, geometry='geometry', crs=\"EPSG:2154\")\n",
+    "        \n",
+    "        print(f\"Succès ! {len(gdf)} carreaux chargés.\")\n",
+    "        return gdf\n",
     "    else:\n",
-    "        print(f\"echec du télechargement code status : {reponse.status_code}\")\n",
+    "        print(f\"ERREUR : Le fichier est introuvable à l'adresse suivante : {os.path.abspath(chemin_fichier)}\")\n",
+    "        print(\"Vérifiez que le fichier est bien placé dans le dossier data/raw/\")\n",
+    "        return None\n",
     "\n",
-    "    # suppression des fichiers inutiles de la réunion et de la martinique\n",
-    "    extensions = [\"dbf\", \"prj\", \"shp\", \"shx\"]\n",
-    "    for e in extensions:\n",
-    "        try:\n",
-    "            os.remove(os.path.join(dossier_data, f\"carreaux_200m_mart.{e}\"))\n",
-    "        except Exception:\n",
-    "            print(\"erreur_suppresion_martinique\")\n",
-    "        try:\n",
-    "            os.remove(os.path.join(dossier_data, f\"carreaux_200m_reun.{e}\"))\n",
-    "        except Exception:\n",
-    "            print(\"erreur_suppresion_reunion\")\n",
-    "\n",
-    "    # conversion en dataframe centré sur l'idf\n",
-    "    df = gpd.read_file(os.path.join(dossier_data, \"carreaux_200m_met.shp\"))\n",
-    "\n",
-    "    # récupération des départements associés à lcog_geo\n",
-    "    url_base = \"https://geo.api.gouv.fr/communes\"\n",
-    "    parametres = {\n",
-    "        \"codeRegion\": \"11\",              # Île-de-France\n",
-    "        \"type\": \"commune-actuelle,arrondissement-municipal\",\n",
-    "        \"fields\": \"nom,code,codeDepartement\",  # Les colonnes voulues\n",
-    "        \"format\": \"json\"}\n",
-    "    response = requests.get(url_base, params=parametres)\n",
-    "    df2 = pd.DataFrame(response.json())\n",
-    "\n",
-    "    # --- rightjoin ---\n",
-    "    df3 = pd.merge(df, df2, left_on=\"lcog_geo\", right_on=\"code\", how=\"right\")\n",
-    "    df3.head()\n",
-    "\n",
-    "    # --- récupération des données de pollution ---\n",
-    "    polluants = [\"no2\", \"pm10\", \"pm25\"]\n",
-    "    for p in polluants:\n",
-    "        df3[p] = pd.read_csv(os.path.join(dossier_data, f\"donnees_pollution{p}_checkpoint.csv\"))\n",
-    "\n",
-    "    # --- suppression des données téléchargées ---\n",
-    "    for e in extensions:\n",
-    "        try:\n",
-    "            os.remove(os.path.join(dossier_data, f\"carreaux_200m_met.{e}\"))\n",
-    "        except Exception:\n",
-    "            print(\"erreur_suppresion_métropole\")\n",
-    "    return (df3)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a3e2600a",
    "metadata": {},
    "outputs": [
@@ -154,8 +111,10 @@
     }
    ],
    "source": [
-    "df=telecharger_donnees()\n",
-    "print(df.columns)"
+    "df = charger_donnees_pollution()\n",
+    "if df is not None:\n",
+    "    display(df[['nom', 'ind_snv', 'no2', 'geometry']].head())\n",
+    "    print(df.columns)"
    ]
   },
   {
