--- a/notebooks/3_modelisation.ipynb
+++ b/notebooks/3_modelisation.ipynb
@@ -57,33 +57,40 @@
     "from shapely import wkt\n",
     "\n",
     "def charger_donnees_pollution():\n",
-    "    # Définition du chemin relatif\n",
-    "    # On remonte d'un dossier (..) pour sortir de /notebooks et on va dans /data/raw\n",
     "    dossier_raw = os.path.join(\"..\", \"data\", \"raw\")\n",
-    "    chemin_fichier = os.path.join(dossier_raw, \"donnees_pollutions_carreaux.txt\")\n",
+    "    \n",
+    "    nom_base = \"donnees_pollutions_carreaux\"\n",
+    "    \n",
+    "    # On cherche le fichier (qu'il soit .txt, .csv ou sans extension car il n'y a pas la mention .txt sur github)\n",
+    "    chemin_fichier = None\n",
+    "    for ext in [\"\", \".txt\", \".csv\"]:\n",
+    "        test_path = os.path.join(dossier_raw, nom_base + ext)\n",
+    "        if os.path.exists(test_path):\n",
+    "            chemin_fichier = test_path\n",
+    "            break\n",
     "\n",
-    "    # Vérification de l'existence du fichier\n",
-    "    if os.path.exists(chemin_fichier):\n",
-    "        print(f\"Chargement en cours : {chemin_fichier}\")\n",
+    "    # Vérification et chargement\n",
+    "    if chemin_fichier:\n",
+    "        print(f\"Fichier détecté et chargement en cours : {chemin_fichier}\")\n",
     "        \n",
-    "        # Lecture du fichier (c'est un CSV avec séparateur virgule par défaut)\n",
+    "        # Lecture du fichier\n",
     "        df = pd.read_csv(chemin_fichier)\n",
     "        \n",
-    "        # Conversion de la colonne 'geometry' en vraies formes géométriques\n",
-    "        print(\"Conversion des géométries\")\n",
+    "        # Conversion des géométries\n",
+    "        print(\"Conversion des géométries en cours...\")\n",
     "        df['geometry'] = df['geometry'].apply(wkt.loads)\n",
     "        \n",
-    "        # Transformation en GeoDataFrame \n",
+    "        # Création du GeoDataFrame \n",
     "        gdf = gpd.GeoDataFrame(df, geometry='geometry', crs=\"EPSG:2154\")\n",
     "        \n",
     "        print(f\"Succès ! {len(gdf)} carreaux chargés.\")\n",
     "        return gdf\n",
     "    else:\n",
-    "        print(f\"ERREUR : Le fichier est introuvable à l'adresse suivante : {os.path.abspath(chemin_fichier)}\")\n",
-    "        print(\"Vérifiez que le fichier est bien placé dans le dossier data/raw/\")\n",
+    "        print(f\"ERREUR : Aucun fichier nommé '{nom_base}' trouvé dans {os.path.abspath(dossier_raw)}\")\n",
     "        return None\n",
     "\n",
-    "\n"
+    "# Utilisation\n",
+    "df = charger_donnees_pollution()"
    ]
   },
   {
