rectif du message d'erreur

--- a/notebooks/1_data_collection_cleaning.ipynb
+++ b/notebooks/1_data_collection_cleaning.ipynb
@@ -3741,7 +3741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "c7dd885b",
    "metadata": {},
    "outputs": [
@@ -3786,34 +3786,36 @@
    "source": [
     "import osmnx as ox\n",
     "import os\n",
-    "\n",
-    "# 1. Configuration des chemins (Chemin relatif vers data/raw)\n",
-    "# os.getcwd() est dans /notebooks, on remonte pour aller dans /data/raw\n",
+    "import geopandas as gpd\n",
     "dossier_raw = os.path.join(os.path.dirname(os.getcwd()), \"data\", \"raw\")\n",
     "chemin_fichier = os.path.join(dossier_raw, \"routes_idf.gpkg\")\n",
     "\n",
-    "if not os.path.exists(dossier_raw):\n",
-    "    os.makedirs(dossier_raw)\n",
+    "# Boucle de vérif\n",
+    "if os.path.exists(chemin_fichier):\n",
+    "    print(f\"Le fichier existe déjà dans : {chemin_fichier}\")\n",
+    "    print(\"Action annulée : pas besoin de retélécharger les données.\")\n",
+    "else:\n",
+    "    # On crée le dossier s'il n'existe pas\n",
+    "    if not os.path.exists(dossier_raw):\n",
+    "        os.makedirs(dossier_raw)\n",
+    "        print(f\"Dossier créé : {dossier_raw}\")\n",
     "\n",
-    "# 2. Téléchargement et filtrage\n",
-    "print(\"Extraction des axes routiers (motorway, trunk, primary, secondary)...\")\n",
-    "mes_axes = [\"motorway\", \"trunk\", \"primary\", \"secondary\"]\n",
+    "    print(\"Fichier non trouvé. Extraction des axes routiers (motorway, trunk, primary, secondary)...\")\n",
+    "    mes_axes = [\"motorway\", \"trunk\", \"primary\", \"secondary\"]\n",
     "\n",
-    "# On récupère les données\n",
-    "routes_idf = ox.features_from_place(\"Île-de-France, France\", tags={\"highway\": mes_axes})\n",
+    "    routes_idf = ox.features_from_place(\"Île-de-France, France\", tags={\"highway\": mes_axes})\n",
     "\n",
-    "# On ne garde que les lignes\n",
-    "routes_idf = routes_idf[routes_idf.geometry.type.isin(['LineString', 'MultiLineString'])]\n",
+    "    routes_idf = routes_idf[routes_idf.geometry.type.isin(['LineString', 'MultiLineString'])]\n",
     "\n",
-    "for col in routes_idf.columns:\n",
-    "    if routes_idf[col].apply(lambda x: isinstance(x, list)).any():\n",
-    "        routes_idf[col] = routes_idf[col].astype(str)\n",
+    "    for col in routes_idf.columns:\n",
+    "        if routes_idf[col].apply(lambda x: isinstance(x, list)).any():\n",
+    "            routes_idf[col] = routes_idf[col].astype(str)\n",
     "\n",
-    "# Sauvegarde finale\n",
-    "routes_idf.to_file(chemin_fichier, driver=\"GPKG\")\n",
+    "    #save finale\n",
+    "    routes_idf.to_file(chemin_fichier, driver=\"GPKG\")\n",
     "\n",
-    "print(f\"Extraction terminée avec succès.\")\n",
-    "print(f\"Fichier disponible pour les autres notebooks dans : data/raw/routes_idf.gpkg\")"
+    "    print(f\"Extraction terminée avec succès.\")\n",
+    "    print(f\"Fichier sauvegardé dans : data/raw/routes_idf.gpkg\")"
    ]
   }
  ],
